actualizando el project